version/0.12/_sources/api/solver/_autosummary/settings/fmg_options.rst.txt
:orphan:

.. _fmg_options:

fmg_options
===========

.. currentmodule:: ansys.fluent.core.solver.settings_231.fmg_options

.. autoclass:: fmg_options
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

====================================================================   ==================================================================

Child                                                                                                                             Summary

====================================================================   ==================================================================
:ref:`viscous_terms <viscous_terms>`                                                      Enable viscous terms during FMG initialization.

:ref:`species_reactions <species_reactions>`                               Enable species volumetric reactions during FMG initialization.

:ref:`set_turbulent_viscosity_ratio <set_turbulent_viscosity_ratio>`        Set turbulent viscosity ratio used during FMG initialization.

====================================================================   ==================================================================

.. rubric:: Included in:

======================================   ===========================

Parent                                                       Summary

======================================   ===========================
:ref:`initialization <initialization>`       'initialization' child.

======================================   ===========================

