version/0.17/_sources/api/solver/_autosummary/settings/fmg_options.rst.txt
:orphan:

.. _fmg_options:

fmg_options
===========

.. autoclass:: ansys.fluent.core.solver.settings_232.fmg_options.fmg_options
    :show-inheritance:

.. rubric:: Attributes

====================================================================   ==================================================================

Attribute                                                                                                                         Summary

====================================================================   ==================================================================
:ref:`viscous_terms <viscous_terms>`                                                      Enable viscous terms during FMG initialization.

:ref:`species_reactions <species_reactions>`                               Enable species volumetric reactions during FMG initialization.

:ref:`set_turbulent_viscosity_ratio <set_turbulent_viscosity_ratio>`        Set turbulent viscosity ratio used during FMG initialization.

:ref:`reset_to_defaults <reset_to_defaults>`                                                        Reset FMG controls to default values.

====================================================================   ==================================================================

.. rubric:: Included in:

======================================   ===========================

Parent                                                       Summary

======================================   ===========================
:ref:`initialization <initialization>`       'initialization' child.

======================================   ===========================

